--- a/index.html
+++ b/index.html
@@ -38,26 +38,27 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">サービス
+            <a class="nav-link" href="#service-top">サービス
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">制作実績</a>
+            <a class="nav-link" href="#work-top">制作実績</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">わたしたちについて</a>
+            <a class="nav-link" href="#about-top">わたしたちについて</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">価格表</a>
+            <a class="nav-link" href="#price-top">価格表</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">お問合せ</a>
+            <a class="nav-link" href="#contact-top">お問合せ</a>
           </li>
         </ul>  
       </div>
     </nav>
 
 <!-- top -->
+<section id="top-top">
   <div class="top container-fluid padding">
     <div class="row text-center top-col">
       <div class="col-sm-12 col-md-6">
@@ -83,9 +84,10 @@
       </div>
     </div>
   </div>
+</section>
 
 <!-- service -->
-<!-- section-title -->
+<section  id="service-top">
   <div class="container-fluid padding">
     <div class="row padding text-center">
       <div class="section-title col-12">
@@ -93,7 +95,8 @@
         </div>
     </div>
   </div>
-  <!-- services -->
+
+<!-- services -->
   <div class="container">
     <div class="row text-center padding">
       <div class="col-md-12 col-lg-4">
@@ -145,101 +148,91 @@
       </div>
       </div>
    </div>
-<!-- about -->
-<!-- <div class="fixed-bg bg01">
-	<h1>見出し</h1>
-</div> -->
 
-<!-- うまく動かないfigure -->
-<!-- <figure>
-  <div class="fixed-wrap">
-    <div id="fixed">
-    </div>
-  </div>
-</figure> -->
+</section>
 
 <!-- about -->
-<div class="container-fluid cd-fixed-bg cd-bg-1">
-  <div class="row padding text-center">
-    <div class="section-title col-12">
-      <img src="image/about/aboutus-titled.png" width="300px">
-      </div>
-  </div>
-</div>
-
-<div class="container-fluid padding about cd-scrolling-bg cd-color-1">
-  <div class="row about">
-    <div class="col-12 display-5 text-center">
-      <div class="kakomi-tape3"><span class="title-tape3">こんにちは！</span>あなたのイメージを思い通りのカタチに！<br>ペラ１枚モノのウェブサイトデザインとコーディングに特化しました。</div>
-    </div>
-    <div class="col-sm-12 col-md-6">
-      <p>　バラエティショップ・レットゴーは、<strong class="marker-P-green">ペラ１枚モノのウェブサイトのデザインとコーディング</strong>に特化した３人のチームです。</p>
-      <p>　「あ、ガーデニング始めようかな？」と思ったとき、ふらりとホームセンターに立ち寄るような感覚で、気軽に何でも相談できて、身近に寄り添ったお手伝いができること。</p>
-      <p>　わたしたちのサービスに照らし合わせて言うと、<strong class="marker-P-green">ウェブサイト周りの作業で、今、必要なものだけを必要最低限のコンパクトさで、かつ、気軽に、思い通りにカタチにできること。</strong></p>
-      <p>　それがわたしたち、バラエティショップ・レットゴーの最大の特長です。</p>
-      <p>　代表はソフトハウスで13年間の業務系システム開発の経歴をもとに、現在は個人事業主として、主に個人でお仕事をされている方向けにウェブサイト・CMS導入のサポートや運営代行の業務を行っています。</p>  
-      <p>　また、システム開発以外にも、ウェブサイト運営やSNSの運用、音楽や動画の制作・編集、各種研修業務など幅広い業種で経験を積んできたメンバーと活動しているため、<strong class="marker-P-green">あらゆる業種・職種の案件に対応可能です。</strong></p>
-    </div>
-    <div class="col-sm-12 col-md-6">
-      <p>　これまでは３人各々、個人・法人問わずさまざまな規模の案件に携わってきたわたしたちですが、そんなわたしたちの共通点は、クライアントさまから本音のご要望、本当に実現したいものを引き出すヒアリングスキルと、それをカタチにできる技術力を兼ね備えていること。</p>
-      <p>「そうそう！ 欲しかったのはこんなウェブサイトなんだ！」</p>  
-      <p>というクライアントさまからの声をもっともっと聞きたくて、それぞれの得意分野を活かして活動しています。</p>  
-      <p>　サイトを作りたいけど、まだ何となくのカタチしか想像できない… こんな感じ、というイメージはあるけど、具体的なウェブサイトのカタチはよくわからない…</p>  
-      <p>　そんなあなたが、思い通りのウェブサイトを作るお手伝いをさせていただけたらうれしいです。</p>  
-      <p>　ご興味を持っていただけましたら、<strong class="marker-P-green">メッセージでお気軽にご相談くださいませ。</strong></p> 
-      <p>ご連絡をお待ちしております！</p>
-    </div>
-  </div>
-</div>
-
-
-
-  <!-- works -->
-  <div class="container-fluid padding">
+<section id="about-top">
+  <div class="container-fluid cd-fixed-bg cd-bg-1">
     <div class="row padding text-center">
       <div class="section-title col-12">
-        <img src="image/work/works-titled.png" width="300px">
+        <img src="image/about/aboutus-titled.png" width="300px">
         </div>
     </div>
   </div>
-  <div id="slides" class="carousel slide" data-ride="carousel">
-    <ul class="carousel-indicators">
-      <li data-target="#slides" data-slide-to="0" class="active"></li>
-      <li data-target="#slides" data-slide-to="1"></li>
-      <li data-target="#slides" data-slide-to="2"></li>
-    </ul>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="image/work/test00.jpg" alt="">
-        <!-- <div class="carousel-caption">
-          <h1 class="display-2">Bootstrap</h1>
-          <h3>Complete Website Layout</h3>
-          <button type="button" class="btn btn-outline-light btn-lg">VIEW</button>
-        </div> -->
+  
+  <div class="container-fluid padding about cd-scrolling-bg cd-color-1">
+    <div class="row about">
+      <div class="col-12 display-5 text-center">
+        <div class="kakomi-tape3"><span class="title-tape3">こんにちは！</span>あなたのイメージを思い通りのカタチに！<br>ペラ１枚モノのウェブサイトデザインとコーディングに特化しました。</div>
       </div>
-      <div class="carousel-item">
-        <img src="image/work/test01.jpg" alt="">
-      </div>
-      <div class="carousel-item">
-        <img src="image/work/test02.jpg" alt="">
-      </div>
-    </div>
-  </div>
-
-  <div class="container-fluid work-message">
-    <div class="row text-center">
       <div class="col-sm-12 col-md-6">
-        <img class="work-comment" src="image/work/goodfeel.png" alt="">
-        <!-- <p>あなたの作りたいものによって、あの手この手でふさわしい技術を使ってかたちにしてやんよ。 的なことを文章で添えたい。</p> -->
+        <p>　バラエティショップ・レットゴーは、<strong class="marker-P-green">ペラ１枚モノのウェブサイトのデザインとコーディング</strong>に特化した３人のチームです。</p>
+        <p>　「あ、ガーデニング始めようかな？」と思ったとき、ふらりとホームセンターに立ち寄るような感覚で、気軽に何でも相談できて、身近に寄り添ったお手伝いができること。</p>
+        <p>　わたしたちのサービスに照らし合わせて言うと、<strong class="marker-P-green">ウェブサイト周りの作業で、今、必要なものだけを必要最低限のコンパクトさで、かつ、気軽に、思い通りにカタチにできること。</strong></p>
+        <p>　それがわたしたち、バラエティショップ・レットゴーの最大の特長です。</p>
+        <p>　代表はソフトハウスで13年間の業務系システム開発の経歴をもとに、現在は個人事業主として、主に個人でお仕事をされている方向けにウェブサイト・CMS導入のサポートや運営代行の業務を行っています。</p>  
+        <p>　また、システム開発以外にも、ウェブサイト運営やSNSの運用、音楽や動画の制作・編集、各種研修業務など幅広い業種で経験を積んできたメンバーと活動しているため、<strong class="marker-P-green">あらゆる業種・職種の案件に対応可能です。</strong></p>
       </div>
-      <div class="col-sm-12 col-md-6 ">
-        <img class="skill-img" src="image/work/skill.png" alt="">
+      <div class="col-sm-12 col-md-6">
+        <p>　これまでは３人各々、個人・法人問わずさまざまな規模の案件に携わってきたわたしたちですが、そんなわたしたちの共通点は、クライアントさまから本音のご要望、本当に実現したいものを引き出すヒアリングスキルと、それをカタチにできる技術力を兼ね備えていること。</p>
+        <p>「そうそう！ 欲しかったのはこんなウェブサイトなんだ！」</p>  
+        <p>というクライアントさまからの声をもっともっと聞きたくて、それぞれの得意分野を活かして活動しています。</p>  
+        <p>　サイトを作りたいけど、まだ何となくのカタチしか想像できない… こんな感じ、というイメージはあるけど、具体的なウェブサイトのカタチはよくわからない…</p>  
+        <p>　そんなあなたが、思い通りのウェブサイトを作るお手伝いをさせていただけたらうれしいです。</p>  
+        <p>　ご興味を持っていただけましたら、<strong class="marker-P-green">メッセージでお気軽にご相談くださいませ。</strong></p> 
+        <p>ご連絡をお待ちしております！</p>
       </div>
     </div>
   </div>
+</section>
+<!-- works -->
+  <section id="work-top">
+    <div  class="container-fluid padding">
+      <div class="row padding text-center">
+        <div class="section-title col-12">
+          <img src="image/work/works-titled.png" width="300px">
+          </div>
+      </div>
+    </div>
+    <div id="slides" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+        <li data-target="#slides" data-slide-to="0" class="active"></li>
+        <li data-target="#slides" data-slide-to="1"></li>
+        <li data-target="#slides" data-slide-to="2"></li>
+      </ul>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="image/work/test00.jpg" alt="">
+          <!-- <div class="carousel-caption">
+            <h1 class="display-2">Bootstrap</h1>
+            <h3>Complete Website Layout</h3>
+            <button type="button" class="btn btn-outline-light btn-lg">VIEW</button>
+          </div> -->
+        </div>
+        <div class="carousel-item">
+          <img src="image/work/test01.jpg" alt="">
+        </div>
+        <div class="carousel-item">
+          <img src="image/work/test02.jpg" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid work-message">
+      <div class="row text-center">
+        <div class="col-sm-12 col-md-6">
+          <img class="work-comment" src="image/work/goodfeel.png" alt="">
+          <!-- <p>あなたの作りたいものによって、あの手この手でふさわしい技術を使ってかたちにしてやんよ。 的なことを文章で添えたい。</p> -->
+        </div>
+        <div class="col-sm-12 col-md-6 ">
+          <img class="skill-img" src="image/work/skill.png" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- price -->
-<section id="price">
+<section id="price-top">
   <div class="container-fluid">
     <div class="row padding text-center">
       <div class="section-title col-12">
@@ -323,31 +316,33 @@
 </section>
 
 <!-- contact -->
-<div class="container-fluid padding contact">
-  <div class="row padding text-center">
-    <div class="section-title col-12">
-      <img src="image/contact/contact-titled.png" width="300px">
-      </div>
-  </div>
-  <div class="container-fluid">
-    <div class="row contact-form"">
-      <div class="col-10 offset-2 contact-text">
-        <form action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSe-3WACMhIBpSN_MI7uFGi9c8Z6oayoseg3P0JuMU7Nwnv5iA/formResponse">
-          <p><label for="name">お名前／会社名（必須）</label></p>
-          <input id="name" type="text" name="entry.1534871579" placeholder="バラエティショップ・レットゴー" required><br>
-          <p><label for="email">メールアドレス（必須）</label><br></p>
-          <input id="email" type="text" name="entry.548437954" placeholder="example@com" required><br>
-          <p><label for="msg">メッセージ本文</label><br></p>
-          <textarea id="msg" name="entry.519001623" placeholder="お気軽にお問い合わせください。"></textarea>
-          <input class ="contact-submit" type="submit" value="送信">
-        </form>
+<section id="contact-top">
+  <div class="container-fluid padding contact">
+    <div class="row padding text-center">
+      <div class="section-title col-12">
+        <img src="image/contact/contact-titled.png" width="300px">
+        </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row contact-form"">
+        <div class="col-10 offset-2 contact-text">
+          <form action="https://docs.google.com/forms/u/2/d/e/1FAIpQLSe-3WACMhIBpSN_MI7uFGi9c8Z6oayoseg3P0JuMU7Nwnv5iA/formResponse">
+            <p><label for="name">お名前／会社名（必須）</label></p>
+            <input id="name" type="text" name="entry.1534871579" placeholder="バラエティショップ・レットゴー" required><br>
+            <p><label for="email">メールアドレス（必須）</label><br></p>
+            <input id="email" type="text" name="entry.548437954" placeholder="example@com" required><br>
+            <p><label for="msg">メッセージ本文</label><br></p>
+            <textarea id="msg" name="entry.519001623" placeholder="お気軽にお問い合わせください。"></textarea>
+            <input class ="contact-submit" type="submit" value="送信">
+          </form>
+        </div>
       </div>
     </div>
+     <div class="contact-hello">
+       <img src="image/contact/hello.png" alt="">
+     </div>
   </div>
-   <div class="contact-hello">
-     <img src="image/contact/hello.png" alt="">
-   </div>
-</div>
+</section>
 
 <footer>
   <div class="container-fluid padding">
@@ -358,13 +353,5 @@
     </div>
   </div>
 </footer>
-
-
-
-   <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>  -->
 </body>
 </html>
